--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "@dicebear/core": "^7.0.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@heroicons/react": "^2.1.1",
     "@nikolovlazar/chakra-ui-prose": "^1.2.1",
     "@rainbow-me/rainbowkit": "^1.1.1",
     "@sentry/nextjs": "^7.86.0",
@@ -68,17 +67,16 @@
     "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
     "react-hook-form": "^7.47.0",
     "react-hotkeys-hook": "^4.4.1",
     "react-icons": "^4.10.1",
-    "react-jazzicon": "^1.0.4",
     "react-virtuoso": "^4.7.1",
     "tinycolor2": "^1.6.0",
     "use-debounce": "^10.0.0",
     "usehooks-ts": "^2.9.2",
     "viem": "^1.21.4",
-    "wagmi": "^1.4.5",
-    "zod": "^3.21.4"
+    "wagmi": "^1.4.5"
   },
   "devDependencies": {
     "@apollo/experimental-nextjs-app-support": "^0.5.1",
