--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "next": "14.0.4",
+    "next-themes": "^0.3.0",
     "next-usequerystate": "^1.9.2",
     "nextjs-toploader": "^1.6.4",
     "numeral": "^2.0.6",
