--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "next": "14.0.4",
+    "next-themes": "^0.3.0",
     "next-usequerystate": "^1.9.2",
     "nextjs-toploader": "^1.6.4",
     "numeral": "^2.0.6",
@@ -79,7 +80,7 @@
     "wagmi": "^1.4.5"
   },
   "devDependencies": {
-    "@apollo/experimental-nextjs-app-support": "^0.5.1",
+    "@apollo/experimental-nextjs-app-support": "^0.8.0",
     "@chakra-ui/cli": "^2.4.1",
     "@chakra-ui/styled-system": "^2.9.1",
     "@graphql-codegen/cli": "^5.0.0",
