--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "lokijs": "^1.5.12",
     "msw": "2.0.10",
     "prettier": "^2.8.8",
+    "sentry-testkit": "^5.0.9",
     "stylelint": "^15.9.0",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-prettier": "^3.0.0",
