--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "@apollo/client": "3.8.0-rc.1",
-    "@balancer/sdk": "^0.12.0",
+    "@balancer/sdk": "^0.13.0",
     "@chakra-ui/anatomy": "^2.2.2",
     "@chakra-ui/hooks": "^2.2.1",
     "@chakra-ui/icons": "^2.1.0",
@@ -116,6 +116,7 @@
     "lokijs": "^1.5.12",
     "msw": "2.0.10",
     "prettier": "^2.8.8",
+    "sentry-testkit": "^5.0.9",
     "stylelint": "^15.9.0",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-prettier": "^3.0.0",
