--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@sentry/nextjs": "^7.86.0",
     "@tanstack/react-query": "^4.29.19",
     "@tanstack/react-table": "^8.9.3",
+    "@uidotdev/usehooks": "^2.4.1",
     "@vercel/speed-insights": "^1.0.1",
     "bignumber.js": "^9.1.2",
     "chakra-react-select": "^4.7.6",
