--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ NEXT_PUBLIC_WALLET_CONNECT_ID=1b6b722470b504a53cf011e1e629a9eb
 
 PRIVATE_HYPERNATIVE_EMAIL=xxx
 PRIVATE_HYPERNATIVE_PASSWORD=xxx
+PRIVATE_CURRENCYAPI_KEY=xxx
 
 # Set your own infura key to run integration tests
 NEXT_PRIVATE_INFURA_KEY=xxx
