chore: Gen typings in actions setup

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -16,3 +16,6 @@ runs:
     - name: Install dependencies
       shell: bash
       run: pnpm i --frozen-lockfile
+    - name: Generate api typings
+      shell: bash
+      run: pnpm gen:graphql:prod
