--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@dicebear/core": "^7.0.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fireworks-js/react": "^2.10.7",
     "@nikolovlazar/chakra-ui-prose": "^1.2.1",
     "@rainbow-me/rainbowkit": "^2.0.5",
     "@sentry/nextjs": "^7.112.2",
@@ -76,6 +77,7 @@
     "react-virtuoso": "^4.7.1",
     "tinycolor2": "^1.6.0",
     "use-debounce": "^10.0.0",
+    "use-sound": "^4.0.1",
     "usehooks-ts": "^2.9.2",
     "viem": "^2.7.6",
     "wagmi": "^2.5.20"
