--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,12 @@
     },
     "types": ["vitest/globals"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "types/global-ts.d.ts"
+  ],
   "exclude": ["node_modules", ".next"]
 }
