--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "prepare": "husky install",
     "gen:graphql:dev": "DOTENV_CONFIG_PATH=./.env.local graphql-codegen -r dotenv/config",
     "gen:graphql:prod": "DOTENV_CONFIG_PATH=./.env graphql-codegen -r dotenv/config",
-    "gen:theme-typings": "chakra-cli tokens ./lib/shared/services/chakra/themes/bal/theme.ts",
+    "gen:theme-typings": "chakra-cli tokens ./lib/shared/services/chakra/themes/bal/bal.theme.ts",
     "gen:wagmi": "pnpm wagmi generate",
     "test": "pnpm test:unit & pnpm run test:integration",
     "test:unit": "vitest",
