--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_APP_ENV=test
-NEXT_PUBLIC_BALANCER_API_URL=https://test-api-v3.balancer.fi/graphql
+NEXT_PUBLIC_BALANCER_API_URL=https://api-v3.balancer.fi/graphql
