--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@vercel/speed-insights": "^1.0.1",
     "bignumber.js": "^9.1.2",
     "chakra-react-select": "^4.7.6",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "deepmerge": "^4.3.1",
     "echarts": "^5.4.3",
