--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "@types/pluralize": "^0.0.33",
     "@types/react": "18.2.34",
     "@types/react-dom": "18.2.6",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/tinycolor2": "^1.4.6",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
