--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "graphql": "^16.7.1",
     "graphql-request": "^6.1.0",
     "graphql-tag": "^2.12.6",
+    "lenis": "^1.1.6",
     "lodash": "^4.17.21",
     "next": "14.2.0",
     "next-themes": "^0.3.0",
