--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@nikolovlazar/chakra-ui-prose": "^1.2.1",
     "@rainbow-me/rainbowkit": "^2.1.1",
     "@sentry/nextjs": "^8.13.0",
+    "@studio-freight/react-lenis": "^0.0.47",
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-table": "^8.9.3",
     "@vercel/speed-insights": "^1.0.1",
@@ -64,7 +65,6 @@
     "graphql": "^16.7.1",
     "graphql-request": "^6.1.0",
     "graphql-tag": "^2.12.6",
-    "lenis": "^1.1.6",
     "lodash": "^4.17.21",
     "next": "14.2.0",
     "next-themes": "^0.3.0",
