--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix && pnpm run prettier:fix",
-    "lint:all": "pnpm run lint && pnpm run stylelint && pnpm run prettier && pnpm run typecheck",
+    "lint:all": "pnpm run lint --max-warnings 0 && pnpm run stylelint && pnpm run prettier && pnpm run typecheck",
     "stylelint": "stylelint '**/*.css'",
     "stylelint:fix": "pnpm run stylelint -- --fix",
     "prettier": "prettier --check '**/*.*(md|json|yaml|ts|js|tsx)' --loglevel warn",
     "prettier:fix": "pnpm run prettier --write",
     "typecheck": "tsc --project tsconfig.json --noEmit",
-    "prepare": "husky install",
+    "prepare": "husky",
     "gen:graphql:dev": "DOTENV_CONFIG_PATH=./.env.local graphql-codegen -r dotenv/config",
     "gen:graphql:prod": "DOTENV_CONFIG_PATH=./.env graphql-codegen -r dotenv/config",
     "gen:theme-typings": "chakra-cli tokens ./lib/shared/services/chakra/themes/bal/bal.theme.ts",
@@ -122,7 +122,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "happy-dom": "^12.10.3",
-    "husky": "^8.0.3",
+    "husky": "^9.1.2",
     "lint-staged": "^13.2.3",
     "lokijs": "^1.5.12",
     "msw": "2.0.10",
