--- a/app/manifest.json
+++ b/app/manifest.json
@@ -4,6 +4,11 @@
   "description": "Balancer is a battle-tested toolkit for true AMM experimentation and innovation.",
   "icons": [
     {
+      "src": "/images/icons/balancer.svg",
+      "sizes": "any",
+      "type": "image/svg+xml"
+    },
+    {
       "src": "/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
